--- a/Homework 7/My Webiste 1.1.html
+++ b/Homework 7/My Webiste 1.1.html
@@ -1,9 +1,10 @@
 <html>
+    <body style="background-color: darkgreen;">
 <head>
     <title>Homepage</title>
 </head>
 <body>
-    <h1>Hello! This is one of my first websites!</h1>
+    <h1><span style="font-family: monospace" > Hello! This is one of my first websites!</span></h1>
     <p>Some of my favorite hobbies/activities</p>
     <ul>
         <li>Painting Warhammer and D&D miniatures</li>
