--- a/Homework 7/My Webiste 1.1.html
+++ b/Homework 7/My Webiste 1.1.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1><span style="font-family: monospace" > Hello! This is one of my first websites!</span></h1>
-    <p>Some of my favorite hobbies/activities</p>
+    <p> <span style="font-family: 'Courier New', Courier, monospace;"> Some of my favorite hobbies/activities</span></p>
     <ul>
         <li>Painting Warhammer and D&D miniatures</li>
         <li>Playing bass guitar</li>
@@ -25,7 +25,7 @@
         <li><a href="https://www.thriftbooks.com/">Thriftbooks</a></li>
 
     </ol>
-    <a href="Page 2.html">Page 2</a>
-    <a href="Page 3.html">Page 3</a>
+    <a href="Page 2.1.html">Page 2</a>
+    <a href="Page 3.1.html">Page 3</a>
 </body>
 </html>
