--- a/Homework 7/Page 2.1.html
+++ b/Homework 7/Page 2.1.html
@@ -1,9 +1,16 @@
 <html>
 <head>
+    <style>
+        span
+        {
+            font-size: 18px;font-family: 'Courier New', Courier, monospace;
+        }
+    </style>
+    
     <title>2nd Page</title>
 </head>
 <body>
-    <h1>The Corpse House</h1>
+    <h1><span>The Corpse House</span></h1>
     <p>Here is a short story that I wrote a while back and I revised it a bit more. Hope you enjoy!</p>
     <p>I approach the door. I'm surprised it's still standing up as it is. The old oak wood boards are split and are barely hanging on. Then again, this castle-like home has been here since this town was founded. This would be an amazing place to live, with its cobblestone walls, beautifully intricate oak doors, and a spiraling tower with the most gorgeous view of the town and surrounding mountains. But once you have heard what's happened here, you wouldn’t dare step in. Unless, of course, you’re me.</p>
     <p> Ever since the infamous father who murdered his family at this house, known here as the Darius Murder of '73, it's no surprise this home is called The Corpse House, mainly because they were never able to find the bodies of any of the family members. The only thing that remained was pools of their blood. The police never declared it a murder, but everyone in the town knew: they were gone for good. The father of the family, Andrew Darius, a well-known preacher in town, left quickly after his case was cleared and was no longer a suspect, having his bags out on the porch that morning. Shortly after this tragedy occurred, people started reporting stories about seeing ghosts around this place. They say that the spirits in there were the dead family members, trapped in this plane of existence without a conclusive end to their lives. 
@@ -33,7 +40,7 @@
     <p>The police came in later that night since the neighbors heard the screams from the demon. They started to search the whole house, found me recovering, and I explained to them what happened.</p>
     <p>After searching the whole place, they end up finding the bodies of the Darius', still newly killed, as if they weren't brutally murdered 20 years ago. So, the police were finally able to deem it a murder, and I was finally able to figure out how they died. I learned after the cleansing that the father was a cult member, and was known to have contacted the supernatural, and even made a deal with one, Demorius to be specific. The death of the family was the payment. What he wanted in exchange, I will probably never learn.</p>
     <p>A few weeks after the incident, people never saw or heard anything from the house again. Everything went back to the usual small-town business. The groups of older folks went to get their coffee at the cafe and bullshit about life and tell stories, the streets hummed with beat-up cars and the occasional unmuffled one, and the barbers had one less thing to discuss with their clients. I like to think that the spirits in that home were finally put to rest. The next day, I get a new detail from my mage. Life goes on, I guess.</p>
-<h1>Artwork</h1>
+<h1><span>Artwork</span></h1>
 <img src="kalashi2.png" width="300" height="400"/>
 <p></p>
 <img src="squirtle_art.jpg" width="300" height="400" />
@@ -41,7 +48,7 @@
 <img src="mii_character.jpg" width="300" height="400"/>
 <p></p>
 <img src="rubric_marine.jpg"width="300" height="400"/>
-<a href="My Webiste.html">Page 1</a>
-<a href="Page 3.html">Page 3</a>
+<span><a href="My Webiste 1.1.html">Page 1</a></span>
+<a href="Page 3.3.html">Page 3</a>
 </body>
 </html>
