--- a/Homework 7/Page 3.3.html
+++ b/Homework 7/Page 3.3.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <title>External Style Sheet</title>
+        <link rel="stylesheet" type="text/css" href="mainstyle.css">
+    </head>
     <title>Page 3</title>
 <h1>Contact Us</h1>
 <form action="Page 3.html" type="Post">
