--- a/Homework 7/Page 3.3.html
+++ b/Homework 7/Page 3.3.html
@@ -3,11 +3,11 @@
         <title>External Style Sheet</title>
         <link rel="stylesheet" type="text/css" href="mainstyle.css">
     </head>
-    <title>Page 3</title>
+    <title><span>Page 3</span></title>
 <h1>Contact Us</h1>
 <form action="Page 3.html" type="Post">
-    Name: <input type="text" id="Name"><br>
-    Email Address: <input type="text" id="Email"><br>
+    <span class="lessimportantstuff"></span>  Name: <input type="text" id="Name"><br>
+    <span class="lessimportantstuff"></span> Email Address: <input type="text" id="Email"><br>
     <h1>Accept terms of agreement?</h1>
     <input type="radio" name="answer" value="yes">Yes <br>
     <input type="radio" name="answer" value="no">No <br>
