--- a/Homework 7/Page 3.3.html
+++ b/Homework 7/Page 3.3.html
@@ -3,7 +3,7 @@
         <title>External Style Sheet</title>
         <link rel="stylesheet" type="text/css" href="mainstyle.css">
     </head>
-    <title><span>Page 3</span></title>
+    <span>Page 3</span>
 <h1>Contact Us</h1>
 <form action="Page 3.html" type="Post">
     <span class="lessimportantstuff"></span>  Name: <input type="text" id="Name"><br>
