--- a/Homework 7/Page 3.3.html
+++ b/Homework 7/Page 3.3.html
@@ -12,7 +12,7 @@
     <input type="radio" name="answer" value="yes">Yes <br>
     <input type="radio" name="answer" value="no">No <br>
 </form>
-<a href="My Webiste.html">Page 1</a>
+<a href="My Webiste 1.1.html">Page 1</a>
 <a href="Page 3.html">Page 3</a>
 
 
