--- a/Homework 7/Page 3.3.html
+++ b/Homework 7/Page 3.3.html
@@ -9,8 +9,8 @@
     <span class="lessimportantstuff"></span>  Name: <input type="text" id="Name"><br>
     <span class="lessimportantstuff"></span> Email Address: <input type="text" id="Email"><br>
     <h1>Accept terms of agreement?</h1>
-    <input type="radio" name="answer" value="yes"> id="list" Yes <br>
-    <input type="radio" name="answer" value="no"> id="list" No <br>
+    <input type="radio" name="answer" value="yes" id="list">Yes <br>
+    <input type="radio" name="answer" value="no" id="list">No <br>
 </form>
 <a href="My Webiste 1.1.html">Page 1</a>
 <a href="Page 2.1.html">Page 2</a>
