--- a/Homework 7/Page 3.3.html
+++ b/Homework 7/Page 3.3.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>External Style Sheet</title>
+        <title>Page 3</title>
         <link rel="stylesheet" type="text/css" href="mainstyle.css">
     </head>
     <span>Page 3</span>
