--- a/Homework 7/Page 3.3.html
+++ b/Homework 7/Page 3.3.html
@@ -6,8 +6,8 @@
     <span>Page 3</span>
 <h1>Contact Us</h1>
 <form action="Page 3.html" type="Post">
-    <span class="lessimportantstuff"></span>  Name: <input type="text" id="list"><br>
-    <span class="lessimportantstuff"></span> Email Address: <input type="text" id="list"><br>
+    <span class=".lessimportantstuff"></span>  Name: <input type="text" id="list"><br>
+    <span class=".lessimportantstuff"></span> Email Address: <input type="text" id="list"><br>
     <h1>Accept terms of agreement?</h1>
     <input type="radio" name="answer" value="yes" id="agreement">Yes <br>
     <input type="radio" name="answer" value="no" id="agreement">No <br>
