--- a/Homework 7/My Webiste 1.1.html
+++ b/Homework 7/My Webiste 1.1.html
@@ -11,14 +11,14 @@
         <li>Playing bass guitar</li>
         <li>Growing succulents and other assorted plants!</li>
     </ul>
-    <p>Songs that I Love</p>
+    <p> <span style="font-family: 'Courier New', Courier, monospace;">Songs that I Love</span></p>
     <ul> 
         <li><a href="https://open.spotify.com/track/0sqE6XPi9VAaWl5NxDyMQK?si=4487e0e14c584a06">"All Over You" by Live</a></li>
         <li><a href="https://open.spotify.com/track/0LAcM6I7ijW4VVW0aytl1t?si=631f17e3b90e4f0a">"One" by Metallica</a></li>
         <li><a href="https://open.spotify.com/track/35YZB3NoKwJezIXb1OWaJd?si=3c065c38f9a34808">"Hallelujah" by Paramore</a></li>
         <li><a href="https://open.spotify.com/track/3hUxzQpSfdDqwM3ZTFQY0K?si=e4564a6504064acb">"august" by Taylor Swift</a></li>
     </ul>
-    <p>Favorite Websites</p>
+    <p><span style="font-family: 'Courier New', Courier, monospace;">Favorite Websites</span></p>
     <ol>
         <li><a href="https://www.pokemoncenter.com">Pokemon Center</a></li>
         <li><a href="https://www.games-workshop.com">Games Workshop</a></li>
