--- a/Homework 7/Page 2.1.html
+++ b/Homework 7/Page 2.1.html
@@ -49,6 +49,6 @@
 <p></p>
 <img src="rubric_marine.jpg"width="300" height="400"/>
 <span><a href="My Webiste 1.1.html">Page 1</a></span>
-<a href="Page 3.3.html">Page 3</a>
+<span><a href="Page 3.3.html">Page 3</a></span>
 </body>
 </html>
