--- a/Homework 7/My Webiste 1.1.html
+++ b/Homework 7/My Webiste 1.1.html
@@ -18,7 +18,8 @@
         <li><a href="https://open.spotify.com/track/35YZB3NoKwJezIXb1OWaJd?si=3c065c38f9a34808">"Hallelujah" by Paramore</a></li>
         <li><a href="https://open.spotify.com/track/3hUxzQpSfdDqwM3ZTFQY0K?si=e4564a6504064acb">"august" by Taylor Swift</a></li>
     </ul>
-    <p><span style="font-family: 'Courier New', Courier, monospace;">Favorite Websites</span></p>
+    <p></p>
+    <span style="font-family: 'Courier New', Courier, monospace;">Favorite Websites</span>
     <ol>
         <li><a href="https://www.pokemoncenter.com">Pokemon Center</a></li>
         <li><a href="https://www.games-workshop.com">Games Workshop</a></li>
