--- a/Homework 7/Page 3.1.html
+++ b/Homework 7/Page 3.1.html
@@ -20,10 +20,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </head>
+ <script>
+    function checkboxes()
+
+ </script>
+
+
+</head>
   
   <body>
-    <button type="button" class="btn">Submit</button>
+    <button type="button" class="btn" onclick='checkboxes'>Submit</button>
 
 
 </body>
